# event-driven

./: .dockerignore  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  plan.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: kill-worker.sh  requeue-dlq.sh  seed-job.sh  stress_test.py  wait-for.sh
src/app/: config.py  logging.py
src/app/api/: main.py  schemas.py
src/app/api/routes/: health.py  jobs.py
src/app/db/: engine.py  models.py  uow.py
src/app/domain/: enums.py  errors.py  events.py
src/app/infra/: broker.py  locks.py  redis.py  semaphore.py  storage.py
src/app/janitor/: __main__.py
src/app/messaging/: consumer.py  retry.py  topology.py
src/app/relay/: __main__.py
src/app/repositories/: cache_repo.py  interfaces.py  job_repo.py  outbox_repo.py  task_repo.py
src/app/services/: ingestion.py  notify.py  parsing.py  stitch.py  tts.py
src/app/vendors/: llm.py  tts.py
src/app/workers/: __main__.py
tests/: conftest.py
tests/integration/: test_dlq_routing.py  test_duplicate_events.py
tests/unit/: test_errors.py  test_retry.py  test_semaphore.py  test_state_machine.py  test_tts_cache.py
